# CHGMaskDesigner

./: .gitignore  README.md  pyproject.toml  run_cgh_mask_designer.cmd
cgh_mask_designer/: app.py
cgh_mask_designer.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
cgh_mask_designer/core/: __init__.py  diffraction.py  encoding.py  image_utils.py  settings.py
cgh_mask_designer/io/: __init__.py  json_io.py  svg_export.py
cgh_mask_designer/ui/: __init__.py  image_pane.py  main_window.py
cgh_mask_designer/ui/controls/: encoding_panel.py  io_panel.py  optics_panel.py
